new combined sounds

--- a/comb.html
+++ b/comb.html
@@ -100,6 +100,23 @@
                       -
 
                       <a href="#FlameThrower">Flame Thrower</a>
+                      -
+
+                      <a href="#OpenBottle">Open Bottle</a>
+                      -
+
+                      <a href="#KnifeVeg">Knife Chopping Vegetables</a>
+                      -
+
+                      <a href="#AxeWood">Axe Chopping Wood</a>
+                      -
+
+                      <a href="#Sci-fi">Sci-fi effect</a>
+
+                      -
+
+                      <a href="#Spell">Spell</a>
+
 
               </p>
               <hr></hr>
@@ -531,6 +548,420 @@
           </audio>
            </p>
           <br>
+        </div>
+    </font>
+  </h3>
+<hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <div class="row">
+    <a name="OpenBottle"></a>
+    <div class="col-md-6">
+      <p align="center"> RTSFX Open Bottle (combination)<br>
+      <br \>
+      </a>
+        <audio controls>
+          <source src="audio/combinations/RTSFX_Bottle.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <a href="spectrogram/combinations/RTSFXBottle.png" target="_blank">
+      <img src="spectrogram/combinations/RTSFXBottle.png" alt="RTSFX Open Bottle Spectrogram" width="100%">
+    </a>
+    </div>
+    <div class="col-md-6">
+      <p align="center"> Open Bottle <br>
+      <br \ >
+        <audio controls>
+          <source src="audio/combinations/BottleOpen.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <div align="center">
+      <a href="spectrogram/combinations/OpenBottle.png" target="_blank">
+      <img src="spectrogram/combinations/OpenBottle.png" alt="Open Bottle Spectrogram" width="100%">
+    </a>
+    </div>
+    </div>
+  </div>
+  <hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <h3>
+    <font size="3">
+        <div align="center">
+          <p>
+          Editing view
+          </p>
+          <a href="images/editing_bottle.png" target="_blank">
+            <img src="images/editing_bottle.png" alt="chorus" width="50%">
+          </a>
+        </div>
+        <br>
+        <div>
+          <div align="center">
+          <p align="center">
+          <br>
+          Single sounds <br>
+          <br>
+          Shaker <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_shaker-bottle.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          </p>
+          <br>
+          <p align="center">
+          Shaker <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_shaker-bottle02.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          </p>
+          <br>
+          <p align="center">
+          Whoosh  <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-bottle.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+          <p align="center">
+          Whoosh <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-bottle2.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+          <p align="center">
+          Whoosh <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-bottle03.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+          <p align="center">
+          Stream <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_stream-bottle.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+        </div>
+    </font>
+  </h3>
+<hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <div class="row">
+    <a name="KnifeVeg"></a>
+    <div class="col-md-6">
+      <p align="center"> RTSFX Knife Chopping Vegetables (combination)<br>
+      <br \>
+      </a>
+        <audio controls>
+          <source src="audio/combinations/RTSFX_choppingveg.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <a href="spectrogram/combinations/RTSFXKnife.png" target="_blank">
+      <img src="spectrogram/combinations/RTSFXKnife.png" alt="RTSFX Knife Chopping Vegetables Spectrogram" width="95%">
+    </a>
+    </div>
+    <div class="col-md-6">
+      <p align="center"> Knife Chopping Vegetables <br>
+      <br \ >
+        <audio controls>
+          <source src="audio/combinations/choppingveg.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <div align="center">
+      <a href="spectrogram/combinations/Knife.png" target="_blank">
+      <img src="spectrogram/combinations/Knife.png" alt="Knife Chopping Vegetables Spectrogram" width="100%">
+    </a>
+    </div>
+    </div>
+  </div>
+  <hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <h3>
+    <font size="3">
+        <div align="center">
+          <p>
+          Editing view
+          </p>
+          <a href="images/editing_choppingveg.png" target="_blank">
+            <img src="images/editing_choppingveg.png" alt="chorus" width="50%">
+          </a>
+        </div>
+        <br>
+        <div>
+          <div align="center">
+          <p align="center">
+          <br>
+          Single sounds <br>
+          <br>
+          Switch <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_switch-choppingveg.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          </p>
+          <br>
+          <p align="center">
+          Whoosh <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-choppingveg.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          </p>
+          <br>
+          <p align="center">
+          Whoosh  <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-choppingveg2.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+          <p align="center">
+          Whoosh <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-choppingveg3.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+          <p align="center">
+          Sword <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_sword-choppingveg.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+        </div>
+    </font>
+  </h3>
+<hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <div class="row">
+    <a name="AxeWood"></a>
+    <div class="col-md-6">
+      <p align="center"> RTSFX Axe Chopping Wood (combination)<br>
+      <br \>
+      </a>
+        <audio controls>
+          <source src="audio/combinations/RTSFX_choppingwood.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <a href="spectrogram/combinations/RTSFXAxe.png" target="_blank">
+      <img src="spectrogram/combinations/RTSFXAxe.png" alt="RTSFX Axe Chopping Wood Spectrogram" width="85%">
+    </a>
+    </div>
+    <div class="col-md-6">
+      <p align="center"> Axe Chopping Wood <br>
+      <br \ >
+        <audio controls>
+          <source src="audio/combinations/choppingwood.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <div align="center">
+      <a href="spectrogram/combinations/Axe.png" target="_blank">
+      <img src="spectrogram/combinations/Axe.png" alt="Axe Chopping Wood Spectrogram" width="100%">
+    </a>
+    </div>
+    </div>
+  </div>
+  <hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <h3>
+    <font size="3">
+        <div align="center">
+          <p>
+          Editing view
+          </p>
+          <a href="images/editing_choppingwood.png" target="_blank">
+            <img src="images/editing_choppingwood.png" alt="chorus" width="50%">
+          </a>
+        </div>
+        <br>
+        <div>
+          <div align="center">
+          <p align="center">
+          <br>
+          Single sounds <br>
+          <br>
+          Gun <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_gun-choppingwood.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          </p>
+          <br>
+          <p align="center">
+          Whoosh <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-choppingwood.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+          </p>
+          <br>
+          <p align="center">
+          Whoosh  <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_whoosh-choppingwood2.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+          <p align="center">
+          Hammer <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_hammer-choppingwood.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+          <p align="center">
+          Sword <br>
+          <br>
+          <audio controls>
+              <source src="audio/combinations/RTSFX_sword-choppingveg.wav" type="audio/wav">
+            Your browser does not support the audio element.
+          </audio>
+           </p>
+          <br>
+        </div>
+    </font>
+  </h3>
+<hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <div class="row">
+    <a name="Sci-fi"></a>
+    <div class="col-md-6">
+      <p align="center"> RTSFX Sci-fi effect - Hit to Whoosh (combination)<br>
+      <br \>
+      </a>
+        <audio controls>
+          <source src="audio/combinations/RTSFX_Hittowhoosh.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <a href="spectrogram/combinations/RTSFXHitwhoosh.png" target="_blank">
+      <img src="spectrogram/combinations/RTSFXHitwhoosh.png" alt="RTSFX Sci-fi effect Spectrogram" width="100%">
+    </a>
+    </div>
+    <div class="col-md-6">
+      <p align="center"> Sci-fi effect - Hit to Whoosh <br>
+      <br \ >
+        <audio controls>
+          <source src="audio/combinations/HitToWhoosh.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <div align="center">
+      <a href="spectrogram/combinations/Hitwhoosh.png" target="_blank">
+      <img src="spectrogram/combinations/Hitwhoosh.png" alt="Sci-fi effect Spectrogram" width="75%">
+    </a>
+    </div>
+    </div>
+  </div>
+  <hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <h3>
+    <font size="3">
+        <div align="center">
+          <p>
+          Editing view
+          </p>
+          <a href="images/editing_hittowhoosh.png" target="_blank">
+            <img src="images/editing_hittowhoosh.png" alt="chorus" width="50%">
+          </a>
+        </div>
+    </font>
+  </h3>
+<hr></hr>
+</div>
+<div class="container">
+  <div class="row">
+    <a name="Spell"></a>
+    <div class="col-md-6">
+      <p align="center"> RTSFX Spell (combination)<br>
+      <br \>
+      </a>
+        <audio controls>
+          <source src="audio/combinations/RTSFX_spell.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <a href="spectrogram/combinations/RTSFXSpell.png" target="_blank">
+      <img src="spectrogram/combinations/RTSFXSpell.png" alt="RTSFX Spell Spectrogram" width="100%">
+    </a>
+    </div>
+    <div class="col-md-6">
+      <p align="center"> Spell <br>
+      <br \ >
+        <audio controls>
+          <source src="audio/combinations/MagicSpellBuildUp.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
+      </p>
+      <div align="center">
+      <a href="spectrogram/combinations/Spell.png" target="_blank">
+      <img src="spectrogram/combinations/Spell.png" alt="Spell Spectrogram" width="95%">
+    </a>
+    </div>
+    </div>
+  </div>
+  <hr></hr>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="container">
+  <h3>
+    <font size="3">
+        <div align="center">
+          <p>
+          Editing view
+          </p>
+          <a href="images/editing_spell.png" target="_blank">
+            <img src="images/editing_spell.png" alt="chorus" width="50%">
+          </a>
         </div>
     </font>
   </h3>
