added evaluation results

--- a/allarms.html
+++ b/allarms.html
@@ -34,7 +34,7 @@
         <hr></hr>
           <a
           href="allarms.html">
-          Telephon Bell</a>
+          Telephone Bell</a>
           &nbsp; &nbsp;|
           &nbsp;
           <a
@@ -63,15 +63,20 @@
           &nbsp; &nbsp;|
           &nbsp;
           <a
+          href="compresult.html">
+          Evaluation Results</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
           href="comb.html">
           Combinations</a>
           <hr></hr>
-          | &nbsp; &nbsp;
+          <!-- &nbsp; &nbsp; | 
           <a
           href="references.html">
           References</a>
           &nbsp; &nbsp;|
-          <hr width=30%></hr>
+          <hr width=30%></hr> -->
         </font>
       </center>
   </div>
@@ -79,7 +84,7 @@
   <!--------------------------------------------------------------------------->
       <div>
         <center>
-          <h2>Telephon Bell</h2>
+          <h2>Telephone Bell</h2>
           &nbsp;
           <h2> <font size="4"> Tested with Chrome 58.0.3029.110 (64-bit) </font> </h2>
         </center>
@@ -91,7 +96,7 @@
                   <p>
                     <h2>
                       <font size="3">
-                      <a href="#Bell">Telephon Bell</a>
+                      <a href="#Bell">Telephone Bell</a>
                     </h2>
                   </p>
                   <hr></hr>
@@ -154,7 +159,7 @@
             <a name="Bell"></a>
             <div class="col-md-6">
               <a href="http://c4dm.eecs.qmul.ac.uk/audioengineering/RTSFX/phone-bell.html?p1=860&p2=865&p3=300&p4=12&p5=60&p6=1" target="_blank">
-              <p align="center"> RTSFX Telephon Bell (default)<br>
+              <p align="center"> RTSFX Telephone Bell (default)<br>
               <br \>
               </a>
                 <audio controls>
@@ -167,7 +172,7 @@
             </a>
             </div>
             <div class="col-md-6">
-              <p align="center"> Sample Telephon Bell <br>
+              <p align="center"> Sample Telephone Bell <br>
               <br \ >
                 <audio controls>
                   <source src="audio/allarms/SampleTelephoneBell.wav" type="audio/wav">
