--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <hr></hr>
           <a
           href="allarms.html">
-          Telephon Bell</a>
+          Telephone Bell</a>
           &nbsp; &nbsp;|
           &nbsp;
           <a
@@ -63,14 +63,19 @@
           &nbsp; &nbsp;|
           &nbsp;
           <a
+          href="compresult.html">
+          Evaluation Results</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
           href="comb.html">
           Combinations</a>
           <hr></hr>
-          | &nbsp; &nbsp;
-          <a
+          <!-- &nbsp; &nbsp; |  -->
+          <!-- <a
           href="references.html">
           References</a>
-          &nbsp; &nbsp;|
+          &nbsp; &nbsp;| -->
           <hr width=30%></hr>
         </font>
       </center>
@@ -88,14 +93,17 @@
         <h2>
           <center>
             <font size="3">
-              <p> Here you can find a systematic comparison between the RTSFX sounds with high quality samples. <br>
-                  High quality sounds representative of the sonic taxonomies present in the RTSFX index have been selected. <br>
-                  The comparison is carried out using scientific tools for the representation and analysis of audio data (e.g. Sonic Visualiser). <br>
-                  In order to highligt differencies, similarities and potential improovements, for each analysed sound, a few comments are provided. <br>
-                  Furthermore, while comparing the various sonic materials it is was possible to individiuate those RTSFX settings associated to the most accurate
-                  reproduction of the various samples considered. <br>
-                  This process therefore helps to define RTSFX pre-sets, for each sound a link to related RTSFX settings is therefore provided. <br>
-                  Not all the RTSFX sounds are here evaluated, the focus is on those sounds that, according to the author viewpoint, needs to be significantly improoved. <br>
+              <p> This web page presents the work carried out for the evaluation and improvement of specific RTSFX sounds. <br>
+                The strategy identified for the evaluation of the sound material delivered by the RTSFX service, involved the comparison of specific audio modules with
+                analogous high quality samples. <br>
+                A systematic analysis therefore permitted to individuate similarities and differences amongst the two sonic categories. <br>
+                While comparing the various sonic materials it was also possible to individuate those specific settings associated
+                to the most accurate reproduction of the various samples considered. <br>
+                This process therefore informed the definition of the pre-sets subsequently included in the user graphical interface. <br>
+                High quality sounds representative of the sonic taxonomies present in the RTSFX index have been selected. <br>
+                The comparison is carried out using scientific tools for the representation and analysis of audio data (e.g. Sonic Visualiser). <br>
+                In order to highligt differencies, similarities and potential improovements, for each analysed sound, a few comments are provided. <br>
+                Not all the RTSFX sounds have been evaluated, the focus is on those sounds that, according to an internal RTSFX survey, needed to be significantly improoved. <br>
               </p>
             </font>
           </center>
