--- a/references.html
+++ b/references.html
@@ -64,6 +64,11 @@
           &nbsp; &nbsp;|
           &nbsp;
           <a
+          href="compresult.html">
+          Evaluation Results</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
           href="comb.html">
           Combinations</a>
           <hr></hr>
