--- a/fire.html
+++ b/fire.html
@@ -34,7 +34,7 @@
         <hr></hr>
           <a
           href="allarms.html">
-          Telephon Bell</a>
+          Telephone Bell</a>
           &nbsp; &nbsp;|
           &nbsp;
           <a
@@ -63,14 +63,19 @@
           &nbsp; &nbsp;|
           &nbsp;
           <a
+          href="compresult.html">
+          Evaluation Results</a>
+          &nbsp; &nbsp;|
+          &nbsp;
+          <a
           href="comb.html">
           Combinations</a>
           <hr></hr>
-          | &nbsp; &nbsp;
-          <a
+          <!-- &nbsp; &nbsp; |  -->
+          <!-- <a
           href="references.html">
           References</a>
-          &nbsp; &nbsp;|
+          &nbsp; &nbsp;| -->
           <hr width=30%></hr>
         </font>
       </center>
