--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
   </div>
   </header>
     <!--------------------------------------------------------------------------->
-    <div>
+    <div align="center">
       <center>
         <h1> RTSFX review</h1>
         &nbsp;
         <h2> <font size="4"> Comparing RTSFX sounds with high quality samples </font> </h2>
       </center>
     </div>
-      <div class="container">
+      <div align="center" class="container">
         <h2>
           <center>
             <font size="3">
