--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
   </div>
   </header>
     <!--------------------------------------------------------------------------->
+    <body>
+    <center>
     <div align="center">
       <center>
         <h1> RTSFX review</h1>
@@ -114,5 +116,6 @@
         <img src="images/index.jpg" alt="RTSFX Telephon Bell Spectrogram" width="100%">
       </a>
       </div>
+    </center>
     </body>
     </html>
