--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         border: 0px solid black;
         margin-top: 25px;
         margin-bottom: 25px;
-        margin-right: 350px;
-        margin-left: 350px;
+        /* margin-right: 350px;
+        margin-left: 350px; */
         background-color: white;
       }
       div.boxed {
@@ -85,7 +85,7 @@
     <center>
     <div align="center">
       <center>
-        <h1> RTSFX review</h1>
+        <h2> <a href="compresult.html"> RTSFX review </a> </h2>
         &nbsp;
         <h2> <font size="4"> Comparing RTSFX sounds with high quality samples </font> </h2>
       </center>
@@ -96,8 +96,7 @@
             <font size="3">
               <p> This web page presents the work carried out for the evaluation and improvement of specific RTSFX sounds. <br>
                 The strategy identified for the evaluation of the sound material delivered by the RTSFX service, involved the comparison of specific audio modules with
-                analogous high quality samples. <br>
-                A systematic analysis therefore permitted to individuate similarities and differences amongst the two sonic categories. <br>
+                analogous high quality samples. A systematic analysis therefore permitted to individuate similarities and differences amongst the two sonic categories.
                 While comparing the various sonic materials it was also possible to individuate those specific settings associated
                 to the most accurate reproduction of the various samples considered. <br>
                 This process therefore informed the definition of the pre-sets subsequently included in the user graphical interface. <br>
@@ -115,6 +114,27 @@
         <img src="images/index.jpg" alt="RTSFX Telephon Bell Spectrogram" width="100%">
       </a>
       </div>
+      <div align="center">
+        <center>
+          <h2> <a href="comb.html"> RTSFX Sound Development </a> </h2>
+          &nbsp;
+          <h2> <font size="4"> Creating new RTSFX sounds by combining already existing sound models </font> </h2>
+        </center>
+      </div>
+      <div align="center" class="container">
+        <h2>
+          <center>
+            <font size="3">
+              <p> The development of new sounds for the RTSFX project involved the definition of a specific methodology. The aim was to define a method that could (i) avoid complex and long processes
+                  associated to the design of new algorithm from scratch and (ii) take full advantage of the potentialities related to the RTSFX models already implemented.<br>
+                  Based on these considerations, an original methodology for the development of new sounds was identified. The idea was to consider the RTSFX audio models as basic elements that combined
+                  with each other could be used to constitute new and complex audio effects. By adopting this approach, it was possible to assemble new convincing sounds.
+                </p>
+            </font>
+          </center>
+        </h2>
+      </div>
+      &nbsp;
     </center>
     </body>
     </html>
