--- a/allarms.html
+++ b/allarms.html
@@ -10,8 +10,8 @@
         border: 0px solid black;
         margin-top: 25px;
         margin-bottom: 25px;
-        margin-right: 350px;
-        margin-left: 350px;
+        /* margin-right: 350px;
+        margin-left: 350px; */
         background-color: white;
       }
       div.boxed {
@@ -71,7 +71,7 @@
           href="comb.html">
           Combinations</a>
           <hr></hr>
-          <!-- &nbsp; &nbsp; | 
+          <!-- &nbsp; &nbsp; |
           <a
           href="references.html">
           References</a>
