--- a/bouble.html
+++ b/bouble.html
@@ -10,8 +10,8 @@
         border: 0px solid black;
         margin-top: 25px;
         margin-bottom: 25px;
-        margin-right: 350px;
-        margin-left: 350px;
+        /* margin-right: 350px;
+        margin-left: 350px; */
         background-color: white;
       }
       div.boxed {
